Fix z-index on homepage; fix workload gauge

--- a/imports/ui/css/App.css
+++ b/imports/ui/css/App.css
@@ -33,6 +33,10 @@
   height: auto;
 }
 
+.z-index{
+  z-index: 1045;
+}
+
 .no-float{
   float: none;
 }
